fix: Design and spacing

--- a/kp/challenge02/style.css
+++ b/kp/challenge02/style.css
@@ -24,14 +24,14 @@ body {
 }
 
 .container {
-  width: 80%;
-  max-width: 750px;
   margin: 0 auto;
   background: #23424a;
   color: white;
   padding: 50px 0;
 }
 
-.intro-content {
-  width: 50%;
+.intro-content,
+.body-content {
+  max-width: 450px;
+  margin: 0 auto;
 }
